[package]
name = "dll_plugin_import"
version = "0.1.0"
edition = "2018"

[lib]

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.7"
features = [
    "impl-default",
    "combaseapi",
    "commctrl",
    "commdlg",
    "dwmapi",
    "errhandlingapi",
    "hidusage",
    "libloaderapi",
    "objbase",
    "ole2",
    "processthreadsapi",
    "shellapi",
    "shellscalingapi",
    "shobjidl_core",
    "unknwnbase",
    "winbase",
    "windowsx",
    "winerror",
    "wingdi",
    "winnt",
    "winuser",
]
