[package]
name = "hidpi-gui"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = { git = "https://github.com/cmsd2/winres.git", rev = "53dde863d93a7aaa6aa3300510e965d2bc2d92f4" }

[dependencies]
declare-macro = { path = "../declare-macro" }
lazy_static = "1.3.0"
libloading = "0.5.2"
hidpi = { path = "../hidpi" }
libc = "*"
dll_plugin = { path = "../dll_plugin" }
dll_plugin_import = { path = "../dll_plugin_import" }

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.7"
features = [
    "impl-default",
    "combaseapi",
    "commctrl",
    "commdlg",
    "consoleapi",
    "dwmapi",
    "errhandlingapi",
    "hidusage",
    "libloaderapi",
    "objbase",
    "ole2",
    "processthreadsapi",
    "shellapi",
    "shellscalingapi",
    "shobjidl_core",
    "unknwnbase",
    "winbase",
    "wincon",
    "windowsx",
    "winerror",
    "wingdi",
    "winnt",
    "winuser",
]
