[package]
name = "hidpi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
declare-macro = { path = "../declare-macro" }
lazy_static = "1.3.0"
libloading = "0.5.2"
libc = "*"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.7"
features = [
    "impl-default",
    "combaseapi",
    "commctrl",
    "commdlg",
    "dwmapi",
    "errhandlingapi",
    "hidusage",
    "libloaderapi",
    "objbase",
    "ole2",
    "processthreadsapi",
    "shellapi",
    "shellscalingapi",
    "shobjidl_core",
    "unknwnbase",
    "winbase",
    "windowsx",
    "winerror",
    "wingdi",
    "winnt",
    "winuser",
]
