[package]
name = "use-macro"
version = "0.1.0"
authors = ["l0calh05t <l0calh05t@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
declare-macro = { path = "../declare-macro" }
lazy_static = "1.3.0"
libloading = "0.5.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.7"
features = [
    "combaseapi",
    "commctrl",
    "dwmapi",
    "errhandlingapi",
    "hidusage",
    "libloaderapi",
    "objbase",
    "ole2",
    "processthreadsapi",
    "shellapi",
    "shellscalingapi",
    "shobjidl_core",
    "unknwnbase",
    "winbase",
    "windowsx",
    "winerror",
    "wingdi",
    "winnt",
    "winuser",
]
